--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -5,7 +5,6 @@
 
 \section{Релаксационные генераторы: применение, модели}
 
-Применение: собственно генераторы, источники питания.
 
 Релаксационные генераторы, прямо или косвенно, получили широкое распространение
 в схемотехнике. В первую очередь -- как собственно генераторы
@@ -122,6 +121,14 @@ $V\Tidx{c} < V\Tidx{off}$.
     так и вводя дополнительные элементы.
 
 \end{itemize}
+
+Внешний вид собранной схеме на макетной плате представлен на~(рис.~\ref{atu:f:relax3d_board})
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax3d_board.jpg} }
+  \caption{Схема (рис.~\ref{atu:f:relax3d_schem}), собранная на макетной плате}
+  \label{atu:f:relax3d_board}
+\end{figure}
 
 Возможность работы при низком напряжении питания в данной схеме обеспечивается
 применением переключающего элемента с параметрами
@@ -451,6 +458,14 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
 Различия, несмотря на то, что они заметно меньше, чем допустимы по официальной документации,
 тем не менее существенно больше, чем в предыдущей схеме, что требует
 обязательного учёта в модели.
+
+Внешний вид собранной схеме на макетной плате представлен на~(рис.~\ref{atu:f:relax3ds_board})
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax3ds_board.jpg} }
+  \caption{Схема (рис.~\ref{atu:f:relax3ds_schem}), собранная на макетной плате}
+  \label{atu:f:relax3ds_board}
+\end{figure}
 
 Аналогично предыдущей схеме, рассмотрим её динамику при
 изменении $R_b$, выделяя аналогичные режимы.
