--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -258,12 +258,12 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
 В этих условиях спектр $V_b(t)$ практически представляет собой линейную комбинацию спектров
 (с соответствующими коэффициентами) отдельных релаксационных
 элементов, т.е. набор отдельных частот~(рис.~\ref{atu:f:relax3d_f_02},a).
-Аттрактор системы при этом имееет вид достаточно нетипичный для
+Аттрактор системы при этом имеет вид достаточно нетипичный для
 нехаотрических систем (рис.~\ref{atu:f:relax3d_f_02},b).
 Если отношения частот релаксационных элементов
 не представляют собой рационально число, что аттрактор
-предстваляет собой куб, плотно заполенный по каждой координате в
-дипазоне $[ V\Tidx{off} ; V\Tidx{on} ] $.
+представляет собой куб, плотно заполненный по каждой координате в
+диапазоне $[ V\Tidx{off} ; V\Tidx{on} ] $.
 
 
 \begin{figure}[htb!]
@@ -278,9 +278,9 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
 
 При увеличении $R_b$ связь между релаксационными элементами становится более сильной
 (рис.~\ref{atu:f:relax3d_t_08}), и при этом возможна ситуация, когда
-процесс заряда одного элемента настолько замедляет момент перелючения другого,
-что это замедление влиет на все элементы. Возникает состояние ``гонки'',
-когда первый подошедший к помонту переключения элемент существенно замедляет второго.
+процесс заряда одного элемента настолько замедляет момент переключения другого,
+что это замедление влияет на все элементы. Возникает состояние ``гонки'',
+когда первый переключившийся элемент существенно замедляет переключение второго.
 Таким образом, возникает точка бифуркации, когда малые изменения
 в исходном состоянии системы приводят к существенным изменением в последующей динамике.
 При благоприятных условиях это может приводить к хаотическому поведению.
@@ -309,7 +309,7 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
 
 Однако, сильная связь между релаксационными элементами
 совершенно не обязательно приводит к хаотическому поведению.
-При определелённых условиях возможна самосинхронизация
+При определённых условиях возможна самосинхронизация
 элементов генератора, то есть создаются условия,
 эквивалентные рациональному отношению частот отдельных генераторов.
 Например, при дальнейшем увеличении $R_b$, снова
@@ -336,7 +336,7 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
 \end{figure}
 
 С дальнейшим ростом значения параметра $R_b$, сложно-периодический и хаотический
-режимы чередуются. В конце концов, возникае режим, когда
+режимы чередуются. В конце концов, возникает режим, когда
 один из релаксационных элементов прекращает генерацию~(рис.~\ref{atu:f:relax3d_t_22}).
 Этот момент наступает значительно раньше, чем предсказывает
 модель. Это связано с тем, что применённый в данной схеме переключающий элемент
@@ -349,8 +349,8 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
 \end{figure}
 
 Оставшиеся два рабочих релаксационных элемента обеспечивают
-достоточно бедный линейчатый спектр~(рис.~\ref{atu:f:relax3d_f_22},a).
-Аттратор при этом теряет одно из измерений~(рис.~\ref{atu:f:relax3d_f_22},b),
+достаточно бедный линейчатый спектр~(рис.~\ref{atu:f:relax3d_f_22},a).
+Аттрактор при этом теряет одно из измерений~(рис.~\ref{atu:f:relax3d_f_22},b),
 соответствующее выключившемуся из генерации элементу.
 
 \begin{figure}[htb!]
@@ -440,8 +440,8 @@ $V\Tidx{on}$, $V\Tidx{off}$,
 Согласно документации, для указанной микросхемы
 при $V\Tidx{cc} = \SI{3}{\volt} $
 допустимые диапазоны определяются так:
-$V\Tidx{off} \in [ 0.51; 1.35 ] \SI{}{\volt}$,
-$V\Tidx{on}  \in [ 1.08; 2.16 ] \SI{}{\volt}$.
+$V\Tidx{off} \in [ 0.51; 1.35 ]~ \SI{}{\volt}$,
+$V\Tidx{on}  \in [ 1.08; 2.16 ]~ \SI{}{\volt}$.
 Диапазоны существенно отличаются от таковых для предыдущей схемы.
 Более того, разброс допустимых параметров очень широк,
 и, теоретически, возможно ситуация, когда некоторые из релаксационных
@@ -488,8 +488,8 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
 
 Из-за более сильной связи между элементами,
 наблюдается уширение спектральных линий~(рис.~\ref{atu:f:relax3ds_f_05151}).
-Аттрактор предстваляет собой прямоугольный параллелепипед, достаточно плотно заполненный по каждой координате в
-дипазоне $[ V\Tidx{off,i} ; V\Tidx{on,i} ] $.
+Аттрактор представляет собой прямоугольный параллелепипед, достаточно плотно заполненный по каждой координате в
+диапазоне $[ V\Tidx{off,i} ; V\Tidx{on,i} ] $.
 
 
 \begin{figure}[htb!]
@@ -537,7 +537,7 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
 
 Спектр~(рис.~\ref{atu:f:relax3ds_f_14718},a)
 подтверждает отсутствие хаоса,
-несмотря еа тонкую линейчатую структуру.
+несмотря на тонкую линейчатую структуру.
 Аттрактор принципиально не изменяется~(рис.~\ref{atu:f:relax3ds_f_14718},b),
 но имеет менее плотное заполнение.
 
@@ -551,9 +551,9 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
   \label{atu:f:relax3ds_f_14718}
 \end{figure}
 
-Высокие значения $R_b$, в отличие от предыдуще системы,
+Высокие значения $R_b$, в отличие от предыдущей системы,
 не приводят в быстрому выключению одного из релаксационных
-эелементов, при этом может наблюдаться как мложно-периодическе,
+элементов, при этом может наблюдаться как сложно-периодическое,
 так и хаотическое поведение
 (рис.~\ref{atu:f:relax3ds_t_36060}).
 
@@ -579,8 +579,8 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
   \label{atu:f:relax3ds_f_36060}
 \end{figure}
 
-В целом обе схемы, несмотря на различия, имеют сходные приципы поведения
-в достаточно широком дипазоне значений параметра $R_b$.
+В целом обе схемы, несмотря на различия, имеют сходные принципы поведения
+в достаточно широком диапазоне значений параметра $R_b$.
 Существенная разница проявляется при высоких значениях $R_b$,
 при этом, очевидно, требуется или уточнение модели, или же
 не использование данных режимов, которые в этом контексте не представляют
@@ -603,7 +603,7 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
 
 Параметры: \\
 $R_b$ --- сопротивление в цепи питания (идентифицируемый параметр), \\
-$C_i$ --- ёмкости кождого из релаксационных генераторов, \\
+$C_i$ --- ёмкости каждого из релаксационных генераторов, \\
 $R_{vi}$ --- сопротивления зарядки релаксационных генераторов, \\
 $R_{i}$ --- сопротивления зарядки релаксационных генераторов, \\
 $I_{i,\mathrm{leak}}$ --- токи утечки.
@@ -629,15 +629,36 @@ $R_{i,\mathrm{leak}}$ --- сопротивления утечки.
 
 \section{Критерии идентификации систем из трёх связанных релаксационных генераторов}
 
+Рассмотрим возможные критерии для системы релаксационных
+генераторов. В Первую очередь имеет смысл
+рассмотреть критерии, основанные на физических принципах.
+
+
+\[
+  q_{sv} = \overline{V_1+V_2+V_3} .
+ \]
+
+\[
+  q_{vb} = \overline{V_b} .
+\]
+
+\[
+  q_{hv} = \frac{1}{\overline{V_b}} .
+\]
+
+\[
+  q_{rv} = \frac{\overline{V_1+V_2+V_3}}{\overline{V_b}}.
+\]
+
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.7\textwidth]{p/relax3_read_q-p_q1.png} }
-  \caption{Зависимости для рассмативаетмых критериев идентификации для системы релаксационных генераторов на паре комплиментарных транзисторов}
+  \caption{Зависимости для рассматриваемых критериев идентификации для системы релаксационных генераторов на паре комплиментарных транзисторов}
   \label{atu:f:relax3d_q}
 \end{figure}
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.7\textwidth]{p/relax3ds_read_q-p_q1.png} }
-  \caption{Зависимости для рассмативаетмых критериев идентификации для системы релаксационных генераторов на триггерах Шмидта}
+  \caption{Зависимости для рассматриваемых критериев идентификации для системы релаксационных генераторов на триггерах Шмидта}
   \label{atu:f:relax3ds_q}
 \end{figure}
 
